# stablecoin-depeg-alert

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  deploy.sh  dev-start.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  format-and-lint.sh  init-db.sql  monitoring_server.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  validate_database_fixes.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-update.yml  release.yml  security-scan.yml  simple-ci.yml
bot/: alerts.py  handlers.py  main.py  scheduler.py
core/: ai_predictor.py  config_manager.py  database.py  db_models.py  models.py  monitoring.py  peg_checker.py  prices.py  resilience.py  security.py  sentry_config.py  stablecoins.py  user_manager.py
docs/: CryptoGuard_Architecture.md  CryptoGuard_Checklist.md  CryptoGuard_Tasks.md  Implementation_Summary.md  NEXT_STEPS.md  Ralph_Analysis_Report.md
scripts/: run_tests.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py
